# ytMusicSpotifyLinker

./: .env  .env.example  .gitignore  CLAUDE.md  Cargo.toml  README.md  alacritty.terminfo  cookies.txt  db.sqlite  package.json  playwright.config.ts
backend/: .env.example  .gitignore  Cargo.toml  README.md  build.rs  db.sqlite
backend/.sqlx/: query-0101ca66bf11a68575c80ae938124a653cc5f36b18ed95774611954eea963d56.json  query-03666aa85e05b8ad3ebfbfd780293d4cdc3a1c8d52025a2ab96d5c9059179eb5.json  query-0e4bec3ef11da4e0f41fd88e436085d73cad30bb72c91ce5f0b97ecb88a5e7b6.json  query-187ca1edafc61fb60b03935066f7da50451f2765ebb09d54e139ba9421f04d99.json  query-1cc4104be59638340d487af57837adcebd6d7ba70b7dbc5ba8431dc9bd74b2bd.json  query-1e57f0a796454a96f8be6ac9547717a7999ac73eccc4325642ae52a29b61666a.json  query-2afa9d7ce9843f87c81a65b62ddd8941a5f26460989c10ba559d6d070d5287d6.json  query-3040dc0957afde985a484628d07de2f47f9928dfdbeac46772c8c8059d956506.json  query-316ae532e01d53c15d290c31bf9921af891bedb395a539a05c38c1bc9be7bddd.json  query-36419d91e25b42aed65f4a1aaddad2e171fe0e5906f74e8386d8f725c7a900d3.json  query-3a6bfb104397d6c0920e918078fa2b2a6d05d84623493b8f62eead5745c25667.json  query-3cf7f1bb26c6229588cac3da28692e708f45167e30123278ea131db42d69040f.json  query-3facac6981b05a40d43c34c82a389917bcb998ce30754df403fe9e3a80f5514a.json  query-3fd1f5818ed80620f155be40aaec5085841d452c983e6d8ca5849f526e4f940f.json  query-44c8fb67d2e4649cb56e3ac3aaf9940f402d28f03eed584512b7926639ea4348.json  query-44cea1c0ffb437b78851a1b7a92b4c7afe482d4df42bee08b6ff7177125bdcd1.json  query-4c15090dfaf2e17d8a6f0518c0f7e3c3e8fc76d7b915301b805adafda48c149c.json  query-5105b5db68456469ef449eadc54b2543b80171031900416992936e1853f9d974.json  query-59237e2c61e9c21a0c667473441660cd4072483a0d8099f9fff2bf1ee4f79ff7.json  query-5d0733037bca9cdc51f4987cb445cc9aa3e931c6c413be9aaefde614d6a803db.json  query-5f3005a16ede653c81934d5e74ec6bd3207b45f3eafba06e3b3440eb58a4a4e7.json  query-61784fba3927bca74a5f59ffb0c836335eeba0e96a16269523c8852d47017fbb.json  query-63f48351c5121df1feea06dd9bedd78745adff7d4071f7ae85e1d3dbc3ba22e6.json  query-6524e2cb28334c6ed229da68ad268ae17174b4f7dbce4e2c8bc7412aa133b99d.json  query-7a3f9971ce7507db7aa0c03fe59ed7a3aba631f636ef8012bec98603710145a9.json  query-89415961ab0320e44f7c674b29afb21e6450600cc3968a0fe90a61af9bac2dbe.json  query-94237023eee8e902d29a0a31c88be20e2ce46e76e052a5eefadfa252cc382247.json  query-94cb482b01c895f52ae76a638a2fd12c3c61564e3fb7a2340ed24b7e1f05b617.json  query-999e6883947dab05862b585414d47ccd2d261b24d8a88c5a322871ce861c2be7.json  query-a0f9f5a9385aeb412705ba3cfb8a7bdbcc9c00d046831918b6beff9f29f1be9b.json  query-a9532c93b6a115388aea92af271ba85c3a8cd2f64a074dc409baec9279aaa612.json  query-a9962bb38362ce44bf74f9935e69647f395f1eef9e69d8079bf04413e8ab9548.json  query-b1b5c7a0c7ae22185d59c493516ed0c5ef6c4dbdc273c4bffe55a03b54fe599f.json  query-b1bf74b31a1013a258e4688552f3eb98e3ff6cd5f5d909121da57197140fa9bd.json  query-b30e93764a75f6d948cd85660b2d55195130a5433d5a955291667bfdc75d0375.json  query-b4f04e297791cd0e9fbf4a4f980661577e38821189ab141aa7287033666e5082.json  query-b58b9aaa2b9ce82268738436a428d33caaca556dce665dc6f6e98d6075e32b3c.json  query-b6fd256c07f7c8b24617e1b4a4a733dfb1e18c9a72e49e05c02aa046f6a93718.json  query-b8da808fafc722a9931ba4d4102e0181c7f1d05d633265a2763e5ac54610c274.json  query-ba25d09bbf0dc39e90bda81c70b4cb1feb294ef231ba96af3c2805c44cb45ac8.json  (+16 more)
backend/db.sled/: db
backend/migrations/: 20231108213118_init.sql  20250610185340_extend_schema_for_playlists.sql  20250902000000_add_spotify_oauth_scopes.sql
backend/src/: api.rs  app.rs  config.rs  db.rs  lib.rs  main.rs  users.rs
backend/src/api/: auth.rs  mod.rs  protected.rs  router.rs  routes.rs  spotify.rs  users.rs  watchers.rs
backend/src/app/: example_response.json  (+3 more)
backend/tests/: e2e.rs  lib.rs  mod.rs  spotify_auth_test.rs  spotify_playlists_test.rs
(+108 files in other folders)
