[package]
name = "playlist-linker"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "playlist_linker"
path = "src/lib.rs"

[[bin]]
name = "playlist-linker"
path = "src/main.rs"

[dependencies]
askama = { version = "0.12.1" }
argon2 = "0.5.2"
axum = "0.8.1"
axum-login = "0.17.0"
axum-messages = "0.8.0"
http = "1.0.0"
hyper = "1.0.1"
rand = "0.8.5"
serde = "1"
sqlx = { version = "0.8.1", features = ["sqlite", "time", "runtime-tokio"] }
time = "0.3.39"
tokio = { version = "1.44.0", features = ["full"] }
tower = "0.5.2"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
tower-sessions = { version = "0.14.0", default-features = false, features = [
  "signed",
] }
tower-sessions-sqlx-store = { version = "0.15.0", features = ["sqlite"] }
thiserror = "2.0"
async-trait = "0.1"
anyhow = "1.0.97"
base64 = "0.22"
reqwest = { version = "0.12.14", features = ["json", "cookies"] }
rspotify = { version = "0.15", features = ["client-reqwest"] }
serde_json = "1.0.140"
httpmock = "0.7.0"
url = "2.5.4"
uuid = { version = "1.6", features = ["v4"] }
chrono = "0.4"
sha2 = "0.10"
urlencoding = "2.1"
tracing = "0.1"
futures-util = "0.3.31"
dotenvy = "0.15.7"

[dev-dependencies]
tokio-test = "0.4.2"
test-log = { version = "0.2.11", features = ["trace"] }

[[test]]
name = "e2e"
path = "tests/e2e.rs"
