[package]
name = "playlist-linker"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "playlist_linker"
path = "src/lib.rs"

[[bin]]
name = "playlist-linker"
path = "src/main.rs"

[dependencies]
askama = { version = "0.12.1" }
argon2 = "0.5.3"
axum = "0.8.4"
axum-login = "0.17.0"
axum-messages = "0.8.0"
http = "1.3.1"
hyper = "1.7.0"
rand = "0.8.5"
serde = "1"
sqlx = { version = "0.8.6", features = ["sqlite", "time", "runtime-tokio"] }
time = "0.3.43"
tokio = { version = "1.47.1", features = ["full"] }
tower = "0.5.2"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
tower-sessions = { version = "0.14.0", default-features = false, features = [
  "signed",
] }
tower-sessions-sqlx-store = { version = "0.15.0", features = ["sqlite"] }
thiserror = "2.0"
async-trait = "0.1"
anyhow = "1.0.99"
base64 = "0.22"
reqwest = { version = "0.12.23", features = ["json", "cookies"] }
rspotify = { version = "0.15", features = ["client-reqwest"] }
serde_json = "1.0.143"
httpmock = "0.7.0"
url = "2.5.7"
uuid = { version = "1.18", features = ["v4"] }
chrono = "0.4"
sha2 = "0.10"
urlencoding = "2.1"
tracing = "0.1"
futures-util = "0.3.31"
dotenvy = "0.15.7"

[dev-dependencies]
tokio-test = "0.4.4"
test-log = { version = "0.2.18", features = ["trace"] }

[[test]]
name = "e2e"
path = "tests/e2e.rs"
